[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "discord-py>=2.6.4",
    "flagembedding>=1.3.5",
    "gitpython>=3.1.45",
    "langchain==0.3.23",
    "langchain-community==0.3.21",
    "langchain-core==0.3.55",
    "langchain-ollama==0.3.2",
    "llama-index>=0.14.8",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.1",
    "llama-index-retrievers-bm25>=0.6.5",
    "llama-index-vector-stores-chroma>=0.5.3",
    "ruff>=0.14.5",
]
